--- a/aclimate_site/src/pages/home/Home.css
+++ b/aclimate_site/src/pages/home/Home.css
@@ -1,3 +1,20 @@
+.container-page{
+    height: 100vh;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+}
+
+.container-page section{
+    scroll-snap-type: y mandatory;
+    scroll-snap-align: start;
+    height: 100vh;
+}
+
+#section2{
+    background-color: #012701;
+    color: aliceblue;
+}
+
 .main-content{
     display: flex;
     height: 100vh;
@@ -27,6 +44,3 @@ h1{
     text-shadow: 3px 2px 45px black;
 }
 
-.container-page section{
-    height: 100vh;
-}
