--- a/src/src/pages/home/Home.css
+++ b/src/src/pages/home/Home.css
@@ -10,10 +10,30 @@
   height: 100vh;
 }
 
-#section2 {
+/* Hide scrollbar for Chrome, Safari and Opera */
+.container-page::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.container-page {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+#section-2 {
   background-color: #1a2422;
   /* background-color: #3a4f31; */
   color: aliceblue;
+  color: #fefae0;
+  /* color: #bec7c2; */
+}
+
+#section-3 {
+  background-image: url(../../assets/images/bg-section3.png);
+  /* background-color: #A9B388; */
+  /* background-color: #3a4f31; */
+  color: #fefae0;
   /* color: #c9d6e0; */
   /* color: #bec7c2; */
 }
@@ -40,6 +60,10 @@ h2 {
   font-family: "Cormorant Garamond", serif;
 }
 
+h3 {
+  font-family: "Cormorant Garamond", serif;
+}
+
 .text-title-principal {
   letter-spacing: 50px;
   font-size: 95px;
@@ -49,4 +73,32 @@ h2 {
 
 .p-subtitle {
   text-shadow: 3px 2px 45px black;
+}
+
+.dot {
+  height: 15px;
+  width: 15px;
+  margin-bottom: 10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.dot:hover {
+  cursor: pointer;
+  background-color: rgb(117, 117, 117);
+}
+
+.dot-active {
+  background-color: #c4661f;
+  -webkit-transform: scale3d(1.3, 1.3, 1.3);
+  transform: scale3d(1.3, 1.3, 1.3);
+}
+
+.dot-container {
+  position: fixed;
+  right: 25px;
+  top: 45%;
+  z-index: 1000;
 }
