bg image changed and modified workflow

--- a/src/src/pages/home/Home.css
+++ b/src/src/pages/home/Home.css
@@ -45,7 +45,7 @@
   height: 100vh;
   width: 100%;
   color: white;
-  background-image: url(../../assets/images/bg2.jpg);
+  background-image: url(../../assets/images/bg.jpg);
   background-size: cover;
 }
 
