--- a/src/src/pages/home/Home.css
+++ b/src/src/pages/home/Home.css
@@ -24,19 +24,19 @@
 }
 
 #section-content {
-  background-image: url(../../assets/images/bg-section3.png);
+  background-image: url(../../assets/images/bg-section3.jpg);
   color: #fefae0;
 }
 
 #section-map {
   /* background-color: #1a2422; */
-  background-image: url(../../assets/images/bg-section2.png);
+  background-image: url(../../assets/images/bg-section2.jpg);
   /* background-color: #3a4f31; */
   color: #fefae0;
 }
 
 #section-contact {
-  background-image: url(../../assets/images/bg-section3.png);
+  background-image: url(../../assets/images/bg-section3.jpg);
   /* background-color: #A9B388; */
   /* background-color: #3a4f31; */
   color: #fefae0;
