--- a/src/src/pages/news/News.css
+++ b/src/src/pages/news/News.css
@@ -1,6 +1,6 @@
-h1 {
+/* h1 {
     font-family: "Cormorant Garamond", serif;
-}
+} */
 
 .bg-title {
     background-image: url(../../assets/images/bg2-wide.jpg);
