feat: Update news articles and add new bulletins to the data source
- Added new entries to the news CSV including bulletins and API announcements.
- Introduced new images for bulletin representation in the assets.
- Enhanced the CountryPartner component with improved intersection observer logic.
- Adjusted delay timing for animations in Articles and News components.
- Updated Glossary component for better search functionality and performance.
- Modified Home page to include new bulletin section with images and links.
- Updated translations for English and Spanish to include new bulletin features.

--- a/src/src/pages/home/Home.css
+++ b/src/src/pages/home/Home.css
@@ -36,6 +36,12 @@
 }
 
 #section-contact {
+  background-image: url(../../assets/images/bg-section2.jpg);
+  color: #fefae0;
+  background-size: cover;
+}
+
+#section-bulletin {
   background-image: url(../../assets/images/bg-section3.jpg);
   color: #fefae0;
   background-size: cover;
@@ -65,8 +71,6 @@
 .img-julian {
   width: 50%;
 }
-
-
 
 .p-subtitle {
   text-shadow: 3px 2px 45px black;
@@ -109,7 +113,6 @@
   transition: all 1s;
 }
 
-
 .show {
   filter: blur(0);
   transform: translateX(0);
@@ -144,7 +147,6 @@
 .item-content:hover {
   cursor: pointer;
 }
-
 
 /* Small devices (landscape phones, 576px and up)
 Medium devices (tablets, 768px and up)
